# toefl-gemini

./: .env.example  .gitignore  README.md  eslint.config.mjs  index-readonly-old.jsx  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
plans/: P0_interview_training_voice-first_core_plan.md  P1_interview_training_result_feedback_and_shared_audio_plan.md  interview_training_implementation_plan.md
scripts/: validate.js
src/: env.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  ios-project.yml  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx  ToeflTrainerApp.tsx
src/hooks/: useAudioRecorder.ts  useGeminiTranscription.ts
src/prompts/: interviewTrainingPrompts.ts
src/services/: callStructuredGemini.ts  interviewTrainingEvaluation.ts  interviewTrainingPersistence.ts  interviewTrainingSessionFactory.ts  requestScope.ts
src/test/: ai-tutor-chat-smoke.test.tsx  app-root.test.tsx  audio-playback.test.ts  evaluationDetails.test.ts  interview-generation.test.ts  interview-module.test.tsx  interview-training-components.test.tsx  interview-training-context.test.ts  interview-training-evaluation.test.ts  interview-training-logic-full.test.ts  interview-training-logic-gap.test.ts  interview-training-mode-basic.test.tsx  interview-training-persistence.test.ts  interview-training-result-ui.test.tsx  interview-training-session.test.ts  interview-training-ui.test.tsx  listening-modules.test.tsx  llm-business-key.test.ts  setup.ts  (+22 more)
(+53 files in other folders)
